--- a/style.css
+++ b/style.css
@@ -117,6 +117,9 @@ main .menu-list{
 main span{
     font-size: 12px;
 }
+main .menu-container .item-title {
+    margin-top: 7%!important;
+}
 .item-title ,.item-price{
     width: 100%;
     font-size: 18px!important;
@@ -131,7 +134,7 @@ main span{
     margin: 0;
 }
 .menu-item {
-   width: 45%;
+   width: 48%;
    padding-top: 30%;
    position: relative; 
    overflow: hidden;
@@ -243,11 +246,8 @@ main .desert .drink-item .text-box > .item-title:first-child{
     margin: 0 auto 2.0rem;
 }
 .drink-set .big {
-    font-size: 18px;
+    font-size: 1.125em;
     letter-spacing: 0.10em;
-}
-.bottom {
-    background-color: pink;
 }
 
 #page_top{
@@ -262,7 +262,6 @@ main .desert .drink-item .text-box > .item-title:first-child{
 
 #page_top a {
     display: block;
-    bottom:;
     
 }
 #page_top img {
@@ -320,12 +319,15 @@ main .desert .drink-item .text-box {
     .item-subtitle {
         font-size: 12px;
     }
+    .desert .drink-item > .text-box {
+        width: 100%;
+    }
     .desert .drink-item .item-price {
-        margin-bottom: 1.5rem;
+        margin-bottom: 0.5rem;
     }
 
     main .desert .drink-item .text-box > .item-title:first-child{
-        margin-top: 3.0rem;
+        margin-top: 0;
     }
     /*.comment-box {
         position: absolute;
@@ -334,7 +336,11 @@ main .desert .drink-item .text-box {
     }*/
     main .desert .drink-item > .text-container {
         margin-top: 10rem ;
-    }    
+    }  
+    .drink-set {
+        font-size: 12px;
+    }  
+
 }
 
 
@@ -508,7 +514,7 @@ main .desert .drink-item .text-box {
         width: 40%;
     }
     .menu-list {
-        width: 90%;
+        width: 90%!important;
     }
 
     #page_top{
@@ -525,7 +531,6 @@ main .desert .drink-item .text-box {
     	height:100%;
     	width:100%;
     }
-
     /*.desert-item > .image-box {
         margin: 1.40rem;
         width: 40%;
@@ -557,24 +562,39 @@ main .desert .drink-item .text-box {
 
     }
     */
-
+    
+    .main .menu-list {
+     
+    }
+    .sp-br {
+        display: none;
+    }
     .desert-item {
         margin-bottom: 0;
       display: block;
     }
-    
+    main .desert {
+        width: 90%;
+        margin: auto;
+    }
+    .drink-item > .image-box {
+        margin-left: 0;
+        padding-left: 1.4rem;
+    }
+    .drink-item .image-box > img {
+        width: 100%;
+        }
+
     .drink-item {
     	justify-content:space-between;
     }
     .item-title ,.item-price{
-        font-size:14px!important;
+        font-size:13px!important;
     }
     .item-subtitle{
-        font-size: 11px;
+        font-size: 10px;
     }
 
     .bg-white{
     height:75px;
-
     }
-    
